# Pathfinding

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/shaders/: cromatic.wgsl  custom_material.wgsl  lighting.wgsl  show_prepass.wgsl
src/: _main.rs  components.rs  constants.rs  lib.rs  main.rs  resources.rs  setup.rs
src/characters/: components.rs  constants.rs  mod.rs
src/characters/systems/: clean_up.rs  mod.rs  randomly_move.rs  walk_around.rs
src/creatures/: mod.rs
src/input/: constants.rs  mod.rs  systems.rs
src/input/systems/: control_camera.rs  control_map.rs  mod.rs  spawners.rs
src/lighting/: components.rs  constants.rs  mod.rs  plugin.rs  systems.rs
src/lighting/render/: buffers.rs  extract.rs  mod.rs  nodes.rs  passes.rs  pipelines.rs
src/map/: components.rs  constants.rs  events.rs  map_builder.rs  mod.rs  resources.rs  tile_types.rs  utils.rs
src/map/constants/: glyphs.rs  mod.rs  tilemap.rs
src/map/resources/: cursor_tile_coords.rs  map.rs  mod.rs
src/map/systems/: centre_camera.rs  draw.rs  generate.rs  mod.rs  redraw.rs  set_map_tile.rs  set_tile.rs  spawners.rs  update_cursor_tile_coords.rs  update_map_wall.rs
src/map/tiles/: floor_tiles.rs  mod.rs  wall_tiles.rs
src/pathfinding/: components.rs  mod.rs
src/pathfinding/systems/: mod.rs  pathing.rs  randomly_move.rs  wandering_around.rs
src/plugins/: mod.rs
src/plugins/map/: mod.rs
src/systems/: camera_movement.rs  cursor_tile_coords.rs  mod.rs  pathfinding.rs
src/utils/: get_cursor_tile_coords.rs  mod.rs
